--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.3",
+    "firebase": "^5.9.4",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-firebaseui": "^3.1.2",
+    "react-player": "^1.11.0",
+    "react-scripts": "^2.1.8",
+    "redux": "^4.0.1",
+    "video-react": "^0.13.6"
   },
   "scripts": {
     "start": "react-scripts start",
