--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
+    "bootstrap": "^4.3.1",
     "firebase": "^5.9.4",
     "i": "^0.3.6",
     "npm": "^6.9.0",
